# people

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
src/people/: __init__.py  __main__.py  commands.py  config.py  configs.py  helpers.py  main.py  models.py
src/people/app/: __init__.py  add.py  contact.py  list_people.py  remove.py
src/people/cli/: __init__.py  commands.py  groups.py
src/people/db/: models.py  queries.py
src/people/decorators/: print_table.py
src/people/helpers/: __init__.py  add.py  contact.py  list_people.py  remove.py
src/people/utils/: data_formatter.py  date_formatter.py  dates.py  presenter.py  table.py
test/: test_utils.py
tests/: conftest.py  test_queries.py  test_utils.py  test_utils_table.py
