[project]
name = "people"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Aleksandr Gorokhov", email = "agorokhov94@gmail.com" }
]
dependencies = ["click~=8.1.3", "peewee~=3.16.2", "prettytable~=3.7.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
people = "people.__main__:main"

[tool.flake8]
max-complexity = 10
max-line-length = 88

[tool.mypy]
ignore_missing_imports = true
cache_dir = ".cache/mypy"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"

[tool.rye]
managed = true
dev-dependencies = ["black~=23.3.0", "flake8~=5.0.4", "mypy~=1.3.0", "pytest~=7.3.1", "pyproject-flake8~=5.0.4.post1", "pylint~=2.17.4"]
[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
lint = {chain = ["lint:black", "lint:flake8", "lint:pylint", "lint:mypy"]}
"lint:black" = "black --check src"
"lint:flake8" = "pflake8 src"
"lint:pylint" = "pylint src"
"lint:mypy" = "mypy src"
