[project]
name = "people"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Aleksandr Gorokhov", email = "agorokhov94@gmail.com" }
]
dependencies = ["click~=8.1.3", "peewee~=3.16.2", "prettytable~=3.7.0", "python-dateutil~=2.8.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
people = "people.__main__:main"

[tool.ruff]
cache-dir = ".cache/ruff"

[tool.mypy]
python_version = "3.8"
cache_dir = ".cache/mypy"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "mypy~=1.3.0",
    "pytest~=7.3.1",
    "types-python-dateutil~=2.8.19.13",
    "ruff~=0.0.272",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
check = {chain = ["lint", "test"]}
lint = {chain = ["lint:black", "lint:ruff", "lint:mypy"]}
"lint:black" = "black --check src"
"lint:ruff" = "ruff src"
"lint:mypy" = "mypy src"
test = "pytest test"
