[project]
name = "people"
version = "0.3.1"
description = "Add a short description here"
authors = [
    { name = "Aleksandr Gorokhov", email = "agorokhov94@gmail.com" }
]
dependencies = ["click~=8.1.3", "peewee~=3.16.2", "prettytable~=3.7.0", "python-dateutil~=2.8.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
people = "people.__main__:main"

[tool.isort]
line_length = 88

[tool.ruff]
cache-dir = ".cache/ruff"
[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.pylint."MESSAGES CONTROL"]
# bad-continuation - pylint sometimes complains about black's formatting; we go with black
# logging-format-interpolation, logging-fstring-interpolation, logging-not-lazy
# - pylint wants deferred formatting for log messages (to use less CPU if that
#   log level is disabled). We prefer the legibility of f-strings: f"a is {a}"
disable = [
    "logging-format-interpolation",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "relative-beyond-top-level"
]

[tool.mypy]
python_version = "3.8"
cache_dir = ".cache/mypy"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pyright]
venvPath = ".venv/bin"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "mypy~=1.3.0",
    "pytest~=7.3.1",
    "types-python-dateutil~=2.8.19.13",
    "ruff~=0.0.272",
    "isort>=5.12.0",
    "pylint>=2.17.4",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
check = {chain = ["lint", "test"]}
lint = {chain = ["lint:isort", "lint:black", "lint:ruff", "lint:pylint", "lint:mypy"]}
"lint:isort" = "isort --check src"
"lint:black" = "black --check src"
"lint:ruff" = "ruff src"
"lint:pylint" = "pylint src"
"lint:mypy" = "mypy src"
test = "pytest --junit-xml=report.xml"
fix = {chain = ["fix:isort", "fix:black", "fix:ruff"]}
"fix:isort" = "isort src"
"fix:black" = "black src"
"fix:ruff" = "ruff src --fix"
